--- a/index.ipynb
+++ b/index.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# set-up vacation_days variable\n",
     "vacation_days = 0\n",
@@ -64,7 +72,38 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assignment: think of any item (money in your bank account, mark, number of students) then increment that item by any values of your choice.\n",
+    "\n",
+    "1. Create a variable of that item of choice\n",
+    "2. Assign a value to the variable\n",
+    "3. Increment the variable bt any value of your choice\n",
+    "4. Print the results of the variable (The variable should contain the new value after incrementing it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21000\n"
+     ]
+    }
+   ],
+   "source": [
+    "account_balance = 20000\n",
+    "deposit = 1000\n",
+    "account_balance += deposit\n",
+    "print(account_balance)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +262,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
